crates/pardosa-schema/tests/compile_fail/hashmap_field.rs
use pardosa_schema::GenomeSafe;
use std::collections::HashMap;
#[derive(GenomeSafe)]
struct Bad {
    data: HashMap<String, u32>,
}
fn main() {}
