crates/pardosa-schema/tests/compile_fail/hashmap_field.stderr
error: EVT-014: GenomeSafe: Map- and set-shaped event payloads are forbidden by Solon doctrine (STORY §4.2): enumerate keys as named struct fields or an enum, or store the map outside the event store.
 --> tests/compile_fail/hashmap_field.rs:5:11
  |
5 |     data: HashMap<String, u32>,
  |           ^^^^^^^^^^^^^^^^^^^^
